Fix alignment of icon on module

--- a/version_control/Codurance_September2020/css/modules/stats-highlights.css
+++ b/version_control/Codurance_September2020/css/modules/stats-highlights.css
@@ -41,7 +41,6 @@
   text-align: left;
 }
 
-.highlight__wrapper i,
 .highlight__big-text,
 .highlight__copy {
   max-width: var(--habib-max-width);
